// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render VTeams List Should render VTeams with no items 1`] = `
<ul
  className="abc-duty-details__vteams-list"
  data-lego="react"
  style={Object {}}
/>
`;

exports[`Should render VTeams List Should render VTeams with one 1`] = `
<ul
  className="abc-duty-details__vteams-list"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__vteams-item
    item="vteams item"
    key="0"
    needComma={false}
  />
</ul>
`;

exports[`Should render VTeams List Should render VTeams with some items 1`] = `
<ul
  className="abc-duty-details__vteams-list"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__vteams-item
    item="vteams item1"
    key="0"
    needComma={true}
  />
  <abc-duty-details__vteams-item
    item="vteams item2"
    key="1"
    needComma={true}
  />
  <abc-duty-details__vteams-item
    item="vteams item3"
    key="2"
    needComma={false}
  />
</ul>
`;
